# scientis

./: .env.example  .gitignore  Dockerfile  README.md  TEST_RESULTS.txt  alembic.ini  docker-compose.yml  pyproject.toml  test_results.json
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 001_initial.py
src/scientis/: __init__.py  config.py  db.py  main.py
src/scientis/agent/: __init__.py  graph.py  runner.py  state.py  tools.py
src/scientis/api/: __init__.py  deps.py  exports.py  health.py  papers.py  questions.py
src/scientis/graph/: __init__.py  connection.py  schema.py
src/scientis/llm/: __init__.py  schemas.py
src/scientis/models/: __init__.py  claim.py  db_models.py  events.py  figure.py  hypothesis.py  paper.py  question.py
src/scientis/services/: events.py  figure_understanding.py  graph_service.py  ingestion.py  parsing.py  pipeline.py  retrieval.py  understanding.py
src/scientis/storage/: __init__.py  object_store.py
tests/: test_figure_understanding.py  test_health.py  test_pipeline.py  test_retrieval.py
