[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scientis"
version = "0.1.0"
description = "Agentic scientific discovery system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "lujia chen", email = "lujiac1@uci.edu"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.26.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langchain-core>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "openai>=1.60.0",
    "google-genai>=1.3.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
